--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid" alt="">
+                <div class="col-12 col-sm-3 align-self-center">
+                    <img src="img/logo.png" class="img-fluid c" alt="" >
+                </div>
+                <div class="col-12 col-sm-3 align-self-center text-center">
+                    <button type="submit" class="btn btn-sm btn-block btn-warning" onclick="document.getElementById('reserveForm').scrollIntoView();">Reserve Table</button>                   
                 </div>
             </div>
         </div>
@@ -61,7 +64,7 @@
                 <div class="media">
                     <img src="img/uthappizza.png" class="d-flex mr-3 img-thumbnail align-self-center" alt="uthapizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
                             olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
@@ -75,9 +78,17 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="media">
+                <img src="img/buffet.png" class="d-flex mr-3 img-thumbnail align-self-center order-sm-last" alt="buffet">
+                <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2> 
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six
+                            enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
+                            just $19.99 per person </p>
+                    </div>
+                </div>
             </div>
+            
         </div>
 
         <div class="row row-content align-items-center">
@@ -96,6 +107,49 @@
                     </div>
                 </div>
                 
+            </div>
+        </div>
+
+        <div class="row row-content align-items-center" id="reserveForm">
+            <div class="col-sm-8 col-12 offset-sm-2">
+                <div class="card bg-light ">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form action="">
+                            <div class="form-group row">
+                                <label for="numofguests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-10">
+                                    <input type="radio" id="nog1" name="numofguests" value="1">
+                                    <label for="nog1">1</label>
+                                    <input type="radio" id="nog2" name="numofguests" value="2">
+                                    <label for="nog2">2</label>
+                                    <input type="radio" id="nog3" name="numofguests" value="3">
+                                    <label for="nog3">3</label>
+                                    <input type="radio" id="nog4" name="numofguests" value="4">
+                                    <label for="nog4">4</label>
+                                    <input type="radio" id="nog5" name="numofguests" value="5">
+                                    <label for="nog5">5</label>
+                                    <input type="radio" id="nog6" name="numofguests" value="6">
+                                    <label for="nog6">6</label>  
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="dateandtime" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-md-4">
+                                    <input type="text" placeholder="Date" class="form-control" name="date" id="date">
+                                </div>
+                                <div class="col-md-4">
+                                    <input type="text" placeholder="Time" class="form-control" name="time" id="time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
