--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="img/logo.png" class="img-fluid c" alt="" >
                 </div>
                 <div class="col-12 col-sm-3 align-self-center text-center">
-                    <button type="submit" class="btn btn-sm btn-block btn-warning" onclick="document.getElementById('reserveForm').scrollIntoView();">Reserve Table</button>                   
+                    <a href="#reserve" type="submit" class="btn btn-sm btn-block btn-warning">Reserve Table</a>                   
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center" id="reserveForm">
+        <div class="row row-content align-items-center" id="reserve">
             <div class="col-sm-8 col-12 offset-sm-2">
                 <div class="card bg-light ">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
