--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="offset-md-2 col-md-pull-2">
-                                <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <div class="offset-md-2 col-md-2 ">
+                                <button type="submit" class="btn btn-block btn-secondary" data-dismiss="modal">Cancel</button>
                             </div>
-                            <div class="col-md">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            <div class="col-md-2">
+                                <button type="submit" class="btn btn-block btn-primary">Reserve</button>
                             </div>
                         </div>
                     </form>
@@ -154,10 +154,10 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <img src="img/logo.png" class="img-fluid c" alt="" >
+                    <img src="img/logo.png" class="img-fluid " alt="" >
                 </div>
                 <div class="col-12 col-sm-3 align-self-center text-center">
-                    <button class="btn btn-sm btn-block btn-warning" id="reserveButton">Reserve Table</button>                   
+                    <button class="btn btn-block btn-warning" id="reserveButton" style="color: white">Reserve Table</button>                   
                 </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-md-block">
                                 <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
                                         class="badge badge-pill badge-default">$4.99</span></h2>
                                 <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
@@ -179,7 +179,7 @@
                         </div>
                         <div class="carousel-item">
                             <img src="img/buffet.png" class="d-block img-fluid" alt="buffet">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption  d-md-block">
                                 <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six
                                     enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
@@ -188,7 +188,7 @@
                         </div>
                         <div class="carousel-item">
                             <img src="img/alberto.png" class="d-block img-fluid"  alt="alberto">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption  d-md-block">
                                 <h2>Alberto Somayya</h2>
                                 <h4>Executive Chef</h4>
                                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked
